<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ConfirmacionActivity"
    android:background="@color/textoInicio">

    <TextView
        android:id="@+id/confirmacionPedido"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/back"
        android:paddingTop="15dp"
        android:text="      Pedido registrado \n
       exitosamente.\n   Gracias por elegirnos."
        android:textSize="25dp"></TextView>

    <Button
        android:id="@+id/btnSeguirComprando"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_below="@+id/confirmacionPedido"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/botonInicio"
        android:text="@string/seguirComprando" />

    <TextView
        android:id="@+id/info"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_below="@+id/btnSeguirComprando"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/guardarDatos"
        android:textAlignment="center"
        android:textSize="18dp"
        android:textStyle="bold">

    </TextView>

    <Button
        android:id="@+id/btnGuardarDatos"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/botonInicio"
        android:text="@string/guardar" />

    <TextView
        android:id="@+id/txtMsgEmail"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_below="@+id/btnGuardarDatos"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/txtMsgEmail"
        android:textAlignment="center"
        android:textSize="18dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMsgEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btnEmail"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtEmail"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/botonInicio"
        android:text="@string/enviar" />

</RelativeLayout>