<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RevisarPedidoActivity"
    android:background="@color/textoInicio"
    >


    <LinearLayout
        android:id="@+id/datos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="375dp"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_centerHorizontal="true"
            android:ems="1"
            android:textSize="18dp"
            android:hint="@string/nombre"
            android:inputType="textPersonName" />

        
        <TextView
            android:id="@+id/txtApellido"
            android:layout_width="375dp"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:textSize="18dp"
            android:hint="@string/apellido"
            android:layout_below="@+id/txtNombre"
            android:inputType="textPersonName" />


        <TextView
            android:id="@+id/txtDireccion"
            android:layout_width="375dp"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:textSize="18dp"
            android:hint="@string/direccion"
            android:layout_below="@+id/txtApellido"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txtTelefono"
            android:layout_width="375dp"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:textSize="18dp"
            android:hint="@string/telefono"
            android:layout_below="@+id/txtDireccion"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txtDni"
            android:layout_width="375dp"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:textSize="18dp"
            android:hint="@string/dni"
            android:layout_below="@+id/txtTelefono"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txtDatos"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:textSize="18dp"
            android:ems="10"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/txtDni">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearBtn"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/datos"
        android:gravity="center">

        <Button
            android:id="@+id/btnEdtCliente"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtDatos"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:backgroundTint="@color/botonInicio"
            android:text="@string/edtDatos" />

        <Button
            android:id="@+id/btnEdtPedido"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnEdtCliente"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/botonInicio"
            android:text="@string/edtCarrito" />
    </LinearLayout>


    <Button
        android:id="@+id/btnConfirmar"
        android:layout_width="185dp"
        android:layout_height="55dp"
        android:layout_below="@+id/linearBtn"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/botonInicio"
        android:text="@string/confirmar" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/btnConfirmar"
        android:backgroundTint="@color/botonInicio"
        android:text="@string/volver"
        android:textSize="10dp"></Button>



</RelativeLayout>