<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/textoInicio"
    tools:context=".VerProductActivity">

    <ImageView
        android:id="@+id/item_foto"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="20dp"
        android:padding="4dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/avatar" />

    <TextView
        android:id="@+id/viewNombre"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_below="@+id/item_foto"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/aclaracionUnidad"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_below="@+id/viewNombre"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/viewPrecioTxt"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_below="@+id/aclaranioUnidad"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/precio"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/viewPrecio"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_below="@+id/viewNombre"
        android:layout_gravity="center_horizontal"

        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/viewCantidad"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:textAlignment="center"
        android:hint="Cantidad"
        android:digits="0123456789"
        android:inputType="number" />


    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/eliminar"
        app:backgroundTint="@color/botonInicio" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_below="@+id/btnAñadir"
        android:text="@string/volver"
        android:textSize="10dp"
        app:backgroundTint="@color/botonInicio"></Button>



    <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
    <!--        android:id="@+id/fabAñadir"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_gravity="bottom|end"-->
    <!--        android:clickable="true"-->
    <!--        android:src="@drawable/ic_edit" />-->

</LinearLayout>